added jquery functionality to buttons

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,23 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>THERMOSTAT</title>
-    <script src="js/thermostat.js"></script>
-    <script src="js/lib/jquery-3.1.1.min.js"></script>
   </head>
   <body>
 
-
-
-
-
-
-
+    <h1 id="temperature"></h1>
 
     <button id="up">Up</button>
     <button id="down">Down</button><br>
-    <button id="reset">Reset</button><br>
+    <button id="reset_thermostat">Reset</button><br>
     <button id="save_on">Save On</button>
     <button id="save_off">Save Off</button>
-    
+
+
+    <script type="text/javascript" src="js/thermostat.js"></script>
+    <script type="text/javascript" src="js/lib/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="script.js"></script>
   </body>
+
 </html>
